<resources>
    <string name="app_name">Food-Delivery</string>
    <string name="pizza_titl">🍕 Пицца</string>
    <string name="burger_titl">🍔 Бургеры</string>
    <string name="donuts_titl">🍩 Пончики</string>
    <string name="hot_dogs_titl">🌭 Хот-доги</string>
    <string name="menu_titl">Меню</string>
    <string name="to_korzina">В корзину</string>
    <string name="dostavka_food_header">Доставка еды</string>
    <string name="price_food">Цена:</string>

    <string name="gavaiskaya_pizza">Гавайская</string>
    <string name="gavaiskaya_pizza_cont">Размер: 30 см; Состав: Томатный соус, сыр Моцарелла, ветчина, ананасы</string>
    <integer name="gavaiskaya_pizza_price">619</integer>
    <string name="chiken_pizza">Курица с грибами</string>
    <string name="chiken_pizza_cont">Размер: 30 см; Состав: Соус Цезарь, сыр Моцарелла, курица, грибы, жареный лук</string>
    <integer name="chiken_pizza_price">619</integer>
    <string name="margarita_pizza">Маргарита</string>
    <string name="margarita_pizza_cont">Размер: 30 см; Состав: Томатный соус, сыр Моцарелла, помидоры</string>
    <integer name="margarita_pizza_price">489</integer>
    <string name="meat_pizza">Острая Мясная</string>
    <string name="meat_pizza_cont">Размер: 30 см; Состав: Сыр моцарелла, ветчина, пепперони, халапеньо</string>
    <integer name="meat_pizza_price">619</integer>

    <string name="gorilla_burger">Горилла</string>
    <string name="gorilla_burger_cont">Состав: 2 котлеты из фермерской говядины, томаты, сыр чеддар, лук фри, копченый бекон, перчики халапеньо, салат айсберг, соус тартар на черной булочке. Очень черный, сытный, и безумно стильный</string>
    <integer name="gorilla_burger_price">480</integer>
    <string name="kalif_cipa_burger">Калифорнийская цыпа</string>
    <string name="kalif_cipa_burger_cont">Состав: Сочная отбивная из куриной грудки в панировке, салат айсберг, сыр чеддар, соус айоли, свежие огурчики, томаты и красный лук.</string>
    <integer name="kalif_cipa_burger_price">365</integer>
    <string name="chicago_burger">Чикаго</string>
    <string name="chicago_burger_cont">Состав: Две котлеты из фермерской говядины, жареные шампиньоны, копченый бекон, сыр чеддар, лист салата и сливочный хрен.</string>
    <integer name="chicago_burger_price">435</integer>
    <string name="nikto_ne_post_burger">Большой Джо</string>
    <string name="nikto_ne_post_burger_cont">Состав: Печеный сладкий перец, баклажаны на гриле, лист салата, сметанно-тархуновый соус, нежная моцарелла, вяленые томаты, картофельный драник, лук фри, зернистая горчица.</string>
    <integer name="nikto_ne_post_burger_price">365</integer>

    <string name="maxichiz_hotdog">Макси Чиз</string>
    <string name="maxichiz_hotdog_cont">Состав: Булочка, сырная колбаска, помидоры, красный лук, картофель фри, сыр "Чеддер", кетчуп, сырный соус, сыр "Пармезан".</string>
    <integer name="maxichiz_hotdog_price">209</integer>
    <string name="potehaski_hotdog">По-техасски</string>
    <string name="potehaski_hotdog_cont">Состав: Булочка, говяжья колбаска, красный лук, жареный бекон, картофель фри, соус барбекю, сладкая горчица, лук-фри.</string>
    <integer name="potehaski_hotdog_price">239</integer>
    <string name="krispi_long_hotdog">Криспи Лонг</string>
    <string name="krispi_long_hotdog_cont">Состав: Булочка, свиная колбаска, салат Айсберг, помидоры, красный лук, маринованные огурцы, лук-фри, кетчуп, сладкая мягкая горчица.</string>
    <integer name="krispi_long_hotdog_price">209</integer>
    <string name="beef_teisty_hotdog">Биф тейсти</string>
    <string name="beef_teisty_hotdog_cont">Состав: Булочка, говяжья колбаска, помидоры, красный лук, сыр "Чеддер", салат "Айсберг", специальный соус.</string>
    <integer name="beef_teisty_hotdog_price">239</integer>
    <string name="white_donuts">Пончики с белым шоколадом</string>
    <string name="white_donuts_cont"> 8 свежеиспеченных пончиков с нежным и воздушным белым шоколадом, присыпанные ароматной кокосовой стружкой</string>
    <integer name="white_donuts_price">369</integer>
    <string name="nutella_donuts">8 пончиков с нутеллой</string>
    <string name="nutella_donuts_cont">Насыщенная шоколадно-ореховая паста nutella своим вкусом и консистенцией как нельзя лучше дополняет наш нежный воздушный свежеиспеченный пончик</string>
    <integer name="nutella_donuts_price">369</integer>
    <string name="chernica_donuts">8 пончиков с черничной глазурью</string>
    <string name="chernica_donuts_cont">Восхитительная коробочки с черничными пончиками, такими нежными и совершенно не приторными на вкус, станет прекрасным поводом для уютного чаепития в кругу близких</string>
    <integer name="chernica_donuts_price">349</integer>
    <string name="banana_donuts">Пончики с банановым топпингом</string>
    <string name="banana_donuts_cont">Свежие пончики в сахарной пудре из муки высшего сорта</string>
    <integer name="banana_donuts_price">260</integer>
    <string name="korzina_profile">Корзина и Профиль</string>
    <string name="Profile_menu">👤 Профиль</string>
    <string name="Korzina_menu">🛒 Корзина</string>
    <string name="go_to_menu">Назад в меню</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="nazad">Назад</string>
    <string name="voiti">Войти</string>
    <string name="avtoriz">Авторизироваться</string>
    <string name="zaregistr">Зарегистрироваться</string>
    <string name="outAcc">Выйти из аккаунта</string>
    <string name="Pochta">Почта</string>
    <string name="telephone_number">Телефон</string>
    <string name="no_pass">Забыл пароль?</string>
    <string name="recovery_text">Введите почту, которую вы указывали при регистрации аккаунта</string>
    <string name="rec_pass">Восстановить пароль</string>
    <string name="oform_zakaz">Оформить заказ</string>
    <string name="to_menu">В меню</string>
    <string name="to_oform">Перейти к оформлению заказа</string>
    <string name="adres">Адрес</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="oform_zak">Оформление заказа</string>
    <string name="suuma_zak">Сумма заказа:</string>
    <string name="itg">Итого:</string>
    <string name="dostavka">Доставка: 200 рублей</string>
    <string name="_0">0</string>
    <string name="comm">Комментарий к заказу</string>
    <string name="ochist_kor">Очистить корзину</string>
    <string name="sum_rub">Сумма, руб :</string>
</resources>