<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vxod_Regis_Activity">
    <Button
        android:id="@+id/btn_to_menu_fr_pro"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/go_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/go_to_menu" />
    <Button
        android:id="@+id/btn_toavtorizacia"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="116dp"
        android:text="@string/avtoriz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/avtoriz" />
    <Button
        android:id="@+id/btn_to_registr"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        android:text="@string/zaregistr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_toavtorizacia"
        tools:text="@string/zaregistr" />
</androidx.constraintlayout.widget.ConstraintLayout>