<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <TextView
        android:id="@+id/text_lo3"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="Телефон"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />
    <TextView
        android:id="@+id/text_lo2"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/Pochta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_log"
        tools:text="@string/Pochta" />
    <Button
        android:id="@+id/btn_out"
        android:layout_width="156dp"
        android:layout_height="76dp"
        android:layout_marginBottom="25dp"
        android:text="@string/outAcc"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/outAcc" />
    <Button
        android:id="@+id/to_menu"
        android:layout_width="156dp"
        android:layout_height="76dp"
        android:layout_marginBottom="24dp"
        android:text="@string/go_to_menu"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/go_to_menu" />
    <TextView
        android:id="@+id/Zag_profil"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/Profile_menu"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Profile_menu" />
    <TextView
        android:id="@+id/txt_log"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_lo" />
    <TextView
        android:id="@+id/txt_email"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_lo2" />
    <TextView
        android:id="@+id/txt_number"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="404dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/text_lo"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Zag_profil"
        tools:text="@string/login" />
</androidx.constraintlayout.widget.ConstraintLayout>